--- a/src/components/personalAccountAside/aside.scss
+++ b/src/components/personalAccountAside/aside.scss
@@ -7,8 +7,10 @@
   margin-top: 5rem;
   margin-left: 5rem;
   margin-bottom: 5rem;
+
   .asideProfileInf {
     gap: 2rem;
+
     .profileImg {
       display: flex;
       justify-content: center;
@@ -18,19 +20,24 @@
       border-radius: 50%;
       background-color: rgba(238, 238, 238, 1);
     }
+
     .profileTexts {
       margin-top: 0.5rem;
+
       h1 {
         margin-bottom: 0.5rem;
       }
     }
   }
+
   .asideProfileLinks {
     margin-top: 2rem;
+
     ul {
       li {
         font-size: 1.4rem;
         margin-top: 1rem;
+
         .asideTarif {
           a {
             img {
@@ -39,10 +46,12 @@
             }
           }
         }
+
         a {
           color: rgba(38, 132, 229, 1);
           margin-left: 5rem;
         }
+
         &:last-child {
           a {
             margin-left: 12rem;
@@ -51,8 +60,10 @@
       }
     }
   }
+
   .asideProfileBtns {
     margin-top: 3rem;
+
     button {
       width: 28rem;
       height: 5rem;
@@ -62,15 +73,43 @@
       padding: 0rem 1rem;
       background-color: transparent;
       border: none;
+      cursor: pointer;
+
       img {
         margin-right: 1rem;
         margin-top: -0.5rem;
       }
+
       &:hover {
         background-color: rgba(243, 245, 252, 1);
       }
     }
+
+    // Dropdown styles
+    .dropdown {
+      height: 6rem;
+      margin-left: 3rem; // Adjust as per layout
+      margin-top: 1rem;
+      background-color: rgba(243, 245, 252, 1);
+      padding: 1rem;
+      border-radius: 5px;
+      display: flex;
+      flex-direction: column;
+      button {
+        background-color: transparent;
+        border: none;
+        text-align: left;
+        padding: 0.5rem 1rem;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        img {
+          margin-right: 1rem;
+        }
+      }
+    }
   }
+
   .logout {
     width: 28rem;
     height: 5rem;
@@ -80,7 +119,12 @@
     padding: 0rem 1rem;
     background-color: rgba(246, 246, 246, 1);
     border: none;
-    border-radius: 4px; 
+    border-radius: 4px;
     justify-content: center;
-}
+    cursor: pointer;
+
+    &:hover {
+      background-color: rgba(230, 230, 230, 1);
+    }
+  }
 }
