--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,32 @@ html {
   font-family: "Arial", sans-serif;
 }
 body {
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
 }
 .container {
-  max-width: 2000px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 0 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+html, body {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+@media (max-width: 1024px) {
+  .container {
+    max-width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    max-width: 95%;
+  }
 }
 li {
   list-style: none;
