--- a/src/pages/personalAccount/messages/messages.scss
+++ b/src/pages/personalAccount/messages/messages.scss
@@ -25,7 +25,7 @@
           place-items: center;
           margin-right: 1rem;
         }
-        .profileInf {
+        .profileInf2 {
             h3 {
                 font-size: 1.7rem;
             }
